# danqing-studio

./: .gitignore  AGENTS.md  Cargo.toml  DanQingStudio.spec  Makefile  README.md  README_zh.md  danqing-api.spec  requirements-cuda.txt  requirements-linux-cuda.txt  requirements-mlx.txt  requirements.txt
.github/: pull_request_template.md
backend/: main.py
config/: .app_config.json  models_registry.json
default_config/: models_registry.json  presets.json  workspace.pointer.json.example
desktop/: README.md  package-lock.json  package.json
desktop-iced/: Cargo.toml
desktop-iced/src/: api.rs  app.rs  audio_page.rs  create_page.rs  gallery.rs  main.rs  models_page.rs  right_panel.rs  settings_page.rs  task_queue.rs  video_page.rs
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: canonical_image_family_flux2.md  danqing-studio-personal-tool-optimization-plan.md  danqing-studio-ux-first-optimization-plan.md  danqing_architecture_reference.md  danqing_reuse_report.md  dual_platform_architecture.md  engine_architecture.md  engine_new_model_checklist.md  engine_refactor_plan.md  hunyuan_video15_weights_audit.md  llm_storyboard_complete_design.md  lora_training_plan.md  mlx_metal_vs_cuda_report.md  parity_plan_todo.md  parity_playbook.md  wan2.2_5b_mlx_optimization_plan.md  weight_preconversion_plan.md
frontend/: DQ-UI.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: Info.plist  README.md  build_desktop.py  build_desktop.sh  build_desktop_bundle.sh  build_sidecar.py  calibrate_teacache.py  chapter_e2e_prompt_audit.py  chapter_e2e_prompt_audit.ts  check_consistency.py  check_engine_attention_paths.py  check_engine_backend_imports.py  check_engine_family_layout.py  check_engine_family_primitives.py  check_engine_governance.py  check_engine_modulation_paths.py  check_engine_rope_paths.py  check_engine_sdpa_paths.py  check_ep_boundary.py  check_family_weight_keys.py  check_frontend_governance.py  check_models_registry_contracts.py  check_registry_i18n.py  check_theme_legacy.py  check_ui_compat.py  clean_build.py  clean_download_caches.py  compare_cogvideox_diffusers.py  dev_process.sh  (+37 more)
(+1288 files in other folders)
