[workspace]
resolver = "2"
members = [
    "desktop-iced",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
iced = { version = "0.14", features = ["wgpu", "tokio", "image", "canvas"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }

# Shared Iced UI crates from dq-ui (external repo)
dq-tokens = { path = "../dq-ui/crates/dq-tokens" }
dq-theme = { path = "../dq-ui/crates/dq-theme" }
dq-components = { path = "../dq-ui/crates/dq-components" }
dq-layout = { path = "../dq-ui/crates/dq-layout" }
dq-api = { path = "../dq-ui/crates/dq-api" }

# Extra deps for desktop-iced
rfd = "0.14"
chrono = "0.4"
sysinfo = "0.30"
base64 = "0.22"
