[package]
name = "danqing-studio-iced"
description = "DanQing Studio Desktop — Iced native client with backend API integration"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
dq-api.workspace = true
dq-components.workspace = true
dq-layout.workspace = true
dq-theme.workspace = true
dq-tokens.workspace = true
iced.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rfd.workspace = true
chrono.workspace = true
sysinfo.workspace = true
reqwest.workspace = true
base64.workspace = true
