[package]
name = "danqing-desktop"
version = "0.1.0"
description = "DanQing Studio — Tauri shell for local REST API"
authors = ["DanQing Studio"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "danqing_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "danqing-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = true }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
